--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>Help</h1>
+<p>
+Get help on the Chaos Predictor Tutorial at the
+<a href="http://www.chaospredictor.com/#help">Chaos Predictor help section</a>.
+To get help on this web app, see the
+<a href="http://www.chaospredictor.com/book"><em>Chaos Predictor Tutorial</em>
+book</a>.
+</p>
