--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,10 @@
-<h1>Linux Apps Installer</h1>
-<p>
-This is the home page for the
-<a href="http://www.chaospredictor.com/">Chaos P<a href="http://www.chaospredictor.com/">Chaos Predictor</a>
-sample application.
-</p>
+<div class="center jumbotron">
+	<h1>Welcome to Linux Apps Installer</h1>
+	<h2>
+		This is the home page for the
+		<a href="http://www.chaospredictor.com/">Chaos Predictor</a>
+		sample application.
+	</h2>
+	<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+<%= link_to image_tag("Linux.png", alt: "Rails logo"), 'http://www.chaospredictor.com/' %>
