--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,8 +3,8 @@
 	<h2>
 		This is the home page for the
 		<a href="http://www.chaospredictor.com/">Chaos Predictor</a>
-		sample application.
+		samplbe application.
 	</h2>
-	<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <%= link_to image_tag("Linux.png", alt: "Rails logo"), 'http://www.chaospredictor.com/' %>
