test pass, till 10.5.1

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,15 @@
 <li>
 	<%= gravatar_for user, size: 50 %>
 	<%= link_to user.name, user %>
+	<% if user.activated? %>
+	  <div id="user_active" >
+			<%= "Activated" %>
+		</div>
+	<% else %>
+	  <div id="user_inactive" >
+			<%= "Inactivated" %>
+		</div>	<% end %>	
 	<% if current_user.admin? && !current_user?(user) %>
-		| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+		<%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 	<% end %>
 </li>
