--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,10 @@
 			<h1>
 				<%= gravatar_for @user, size:50%>
 				<%= @user.name %>
+			</h1>			
+			<div>
 				<% if @user.activated? %>
-				  <div id="user_active" >
+			  	<div id="user_active" >
 						<%= "Activated" %>
 					</div>
 				<% else %>
@@ -14,7 +16,20 @@
 						<%= "Inactivated" %>
 					</div>	
 				<% end %>	
-			</h1>
+			</div>
 		</section>
 	</aside>
+	<div class="col-md-8">
+		<% if @user.microposts.any? %>
+			<h3>Microposts (<%= @user.microposts.count %>)</h3>
+			<ol class="microposts">
+				<%= render @microposts %>			
+			</ol>
+			<%= will_paginate @microposts %>
+		<% end %>
+	</div>
 </div>
+
+
+
+
