--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -206,6 +206,7 @@ input {
 .microposts {
 	list-style: none;
 	padding: 0;
+	text-align: left;
 	li {
 		padding: 10px 0;
 		border-top: 1px solid #e8e8e8;
