--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,27 +1,8 @@
 <div class="center jumbotron">
 	<% if logged_in? %>
-		<div class="row">
-			<aside class="col-md-4">
-				<section class="user_info">
-					<%= render 'shared/user_info' %>
-				</section>
-				<section class="micropost_form">
-					<%= render 'shared/micropost_form' %>
-				</section>
-			</aside>
-			<div class="col-md-8">
-				<h3>Micropost Feed</h3>
-				<%= render 'shared/feed' %>
-			</div>
-		</div>
+		<%= render 'static_pages/home_logedin' %>
 	<% else %>
-		<h1>Welcome to Linux Apps Installer</h1>
-		<h2>
-			This is the home page for the
-			<a href="http://www.chaospredictor.com/">Chaos Predictor</a>
-			samplbe application.
-		</h2>
-		<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+		<%= render 'static_pages/home_notlogedin' %>
 	<% end %>
 </div>
 <!--%= link_to image_tag("Linux.png", alt: "Rails logo"), 'http://www.chaospredictor.com/' %-->
