--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,13 @@
 					</div>	
 				<% end %>	
 			</div>
+			<section class="stats">
+				<%= render 'shared/stats' %>
+			</section>
 		</section>
 	</aside>
 	<div class="col-md-8">
+		<%= render 'follow_form' if logged_in? %>	
 		<% if @user.microposts.any? %>
 			<h3>Microposts (<%= @user.microposts.count %>)</h3>
 			<ol class="microposts">
