test pass, instalation: model, controler, model test and contrroler test

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,9 @@
 		<%= link_to "linux apps installer", root_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
+				<% if logged_in? %>
+					<li><%= link_to "Instalation", instalations_path %></li>	
+				<% end %>				
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to "Help", help_path %></li>
 				<% if logged_in? %>
