test pass, integration instalation interface test same as micropost

--- a/app/views/instalations/index.html.erb
+++ b/app/views/instalations/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'All instalation') %>
 <h1>All instalations</h1>
-
+<span><%= pluralize(@instalations.count, "instalation") %></span>
 <%= will_paginate %>
 
 <ul class="instalations">
