--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -25,5 +25,11 @@
 		</section>
 	</aside>
 	<div class="col-md-8">
+		<%= form_for(@line) do |f| %>
+			<div class="field">
+				<%= f.text_area :content, placeholder: "Compose new line..." %>
+			</div>
+			<%= f.submit "Post", class: "btn btn-primary" %>
+		<% end %>
 	</div>
 </div>
