test pass, add line test contoller,integration and model, create line, destroy line and more

--- a/app/views/instalations/index.html.erb
+++ b/app/views/instalations/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'All instalation') %>
-<h1>All instalations</h1>
+<% provide(:title, 'All Instalations') %>
+<h1>All Instalations</h1>
 <span><%= pluralize(@instalations.count, "instalation") %></span>
 <%= will_paginate %>
 
