--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
 				<% if logged_in? %>
-					<li><%= link_to "Instalation", instalations_path %></li>	
+					<li><%= link_to "Instalation", instalations_path %></li>
+					<li><%= link_to "Line", lines_path %></li>	
 				<% end %>				
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to "Help", help_path %></li>
