--- a/app/views/lines/new.html.erb
+++ b/app/views/lines/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Lines#new</h1>
-<p>Find me in app/views/lines/new.html.erb</p>
+<% provide(:title, 'New Line') %>
+<h1>New Line</h1>
+
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for(@line) do |f| %>
+			<%= render 'shared/error_messages', object: f.object %>
+			<%= f.label :content %>
+			<%= f.text_field :content, class: 'form-control' %>
+
+			<%= f.label :index %>
+			<%= f.text_field :index, class: 'form-control' %>
+
+			<%= f.submit "Create new Line", class: "btn btn-primary" %>
+		<% end %>
+	</div>
+</div>
