--- a/app/views/lines/index.html.erb
+++ b/app/views/lines/index.html.erb
@@ -3,7 +3,7 @@
 <span><%= pluralize(@lines.count, "line") %></span>
 <%= will_paginate %>
 
-<ul class="instalations">
+<ul class="lines">
 	<%= render @lines %>
 </ul>
 
