--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -25,11 +25,14 @@
 		</section>
 	</aside>
 	<div class="col-md-8">
-		<%= form_for(current_user.active_relationships.build, remote: true) do |f| %>
+		<span><%= pluralize(Line.count, "line") %></span>
+
+		<%= form_for(@instalation.addline(Line.first, Step.maximum("order")+1), remote: true) do |f| %>
+			<div><%= hidden_field_tag :instalation_id, @instalation.id %></div>
 			<div class="col-md-8">
-				<% cities_array = Line.all.map { |line| [line.content, line.id] } %>
+				<% lines_array = Line.all.map { |line| [line.content, line.id] } %>
 				<select>
-					<%= options_for_select(cities_array) %>
+					<%= options_for_select(lines_array) %>
 				</select>
 			</div>
 			<div class="col-md-4">
