--- a/app/views/instalations/_instalation.html.erb
+++ b/app/views/instalations/_instalation.html.erb
@@ -2,6 +2,7 @@
 	<aside class="col-md-4">
 		<li>
 			<%= link_to instalation.name, instalation %>
+			<!--lines_instalation_path(instalation)-->
 			<% if current_user.admin? %>
 				<%= link_to "edit", edit_instalation_path(instalation)%>
 				<%= link_to "delete", instalation, method: :delete, data: { confirm: "You sure?" } %>
