--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -25,17 +25,24 @@
 		</section>
 	</aside>
 	<div class="col-md-8">
-		<span><%= pluralize(Line.count, "line") %></span>
-
+		<h3><%= @title %></h3>
+		<span><%= pluralize(@lines.count, "line") %></span>
+		<% if @lines.any? %>
+			<ul class="lines">
+				<%= render @lines %>
+			</ul>
+			<!--%= will_paginate %-->
+		<% end %>
 		<%= form_for(@instalation.addline(Line.first, Step.maximum("order")+1), remote: true) do |f| %>
 			<div><%= hidden_field_tag :instalation_id, @instalation.id %></div>
-			<div class="col-md-8">
+			<div class="col-md-10">
+
 				<% lines_array = Line.all.map { |line| [line.content, line.id] } %>
 				<select>
 					<%= options_for_select(lines_array) %>
 				</select>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<%= f.submit "Add line", class: "btn btn-primary" %>
 			</div>
 		<% end %>
