--- a/app/views/instalations/edit.html.erb
+++ b/app/views/instalations/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "Edit Instalation") %>
-<h1>Update Instalation</h1>
+<% provide(:title, "Edit Instalation " + String(@instalation.id)) %>
+<h1>Edit Instalation</h1>
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
