test fail, add line to instalation work

--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -6,7 +6,7 @@
 			<%= line.content %>
 			<% if current_user.admin? %>
 				<% if @instalation %>
-					<%= link_to "remove", @instalation.removeline(line), :class => "remove" %>
+					<%= link_to "remove", @instalation.removeline(line, 1), :class => "remove" %>
 				<% else %>
 					<%= link_to "edit", edit_line_path(line), :class => "edit" %>
 					<%= link_to "delete", line, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
