--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -26,17 +26,19 @@
 	</aside>
 	<div class="col-md-8">
 		<h3><%= @title %></h3>
-		<span><%= pluralize(@lines.count, "line") %></span>
-		<% if @lines.any? %>
+		<% if @line && @lines.any? %>
+			<span><%= pluralize(@lines.count, "line") %></span>
 			<ul class="lines">
 				<%= render @lines %>
 			</ul>
 			<!--%= will_paginate %-->
 		<% end %>
-		<%= form_for(@instalation.addline(Line.first, Step.maximum("order")+1), remote: true) do |f| %>
+		<!--Step.maximum("order")+-->
+		<!--%= form_for(@instalation.addline(Line.first, 1), remote: true) do |f| %-->
+		<%= form_for(@instalation.active_steps.build, remote: true) do |f| %>		
 			<div><%= hidden_field_tag :instalation_id, @instalation.id %></div>
+			<div><%= hidden_field_tag :line_id, Line.first.id %></div>	<!--TODO change to dinamic -->	
 			<div class="col-md-10">
-
 				<% lines_array = Line.all.map { |line| [line.content, line.id] } %>
 				<select>
 					<%= options_for_select(lines_array) %>
