--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -29,14 +29,15 @@
 		<% if @lines.any? %>
 		<!--% if @user.microposts.any? %-->
 			<span><%= pluralize(@lines.count, "line") %></span>
+			<!--%= will_paginate %-->		
 			<ul class="lines">
-				<!--%= render @lines %-->
+				<%= render @lines %>
 			</ul>
 			<!--%= will_paginate %-->
 		<% end %>
 		<!--Step.maximum("order")+-->
 		<!--%= form_for(@instalation.addline(Line.first, 1), remote: true) do |f| %-->
-		<%= form_for(@instalation.active_steps.build, remote: true) do |f| %>		
+		<%= form_for(@instalation.active_steps.build, remote: false) do |f| %>		
 			<div><%= hidden_field_tag :instalation_id, @instalation.id %></div>
 			<div><%= hidden_field_tag :line_id, Line.first.id %></div>	<!--TODO change to dinamic -->	
 			<div class="col-md-10">
