--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -26,7 +26,7 @@
 	</aside>
 	<div class="col-md-8">
 		<h3><%= @title %></h3>
-		<% if @lines != nil & @lines.empty? %>
+		<% if @lines != nil && @lines != "" %>
 		<!--% if @user.microposts.any? %-->
 			<span><%= pluralize(@lines.count, "line") %></span>
 			<!--%= will_paginate %-->		
