--- a/app/views/steps/_step.html.erb
+++ b/app/views/steps/_step.html.erb
@@ -2,7 +2,21 @@
 	<!--aside class="col-md-4"-->
 	<aside>
 		<li>
-			<%= step.order %>
+			<div class="col-md-1">
+				<%= step.order %>
+			</div>
+			<div class="col-md-1">			
+				<%= step.id %>
+			</div>
+			<div class="col-md-1">			
+				<%= step.line_id %>
+			</div>
+			<div class="col-md-6">			
+				<%= Line.find(step.line_id)[:content] %>
+			</div>
+			<div class="col-md-3">			
+				<%= link_to "remove", step_path(step), :method => :delete, :class => "remove" %>
+			</div>
 		</li>
 	</aside>
 	<!--div class="col-md-8"-->
