--- a/app/views/steps/_step.html.erb
+++ b/app/views/steps/_step.html.erb
@@ -2,19 +2,19 @@
 	<!--aside class="col-md-4"-->
 	<aside>
 		<li>
-			<div class="col-md-1">
+			<div class = "col-md-1 <%= "order" + String(step_counter) %>">
 				<%= step.order %>
 			</div>
-			<div class="col-md-1">			
+			<div class="col-md-1 <%= "id" + String(step_counter) %>">			
 				<%= step.id %>
 			</div>
-			<div class="col-md-1">			
+			<div class="col-md-1 <%= "line_id" + String(step_counter) %>">			
 				<%= step.line_id %>
 			</div>
-			<div class="col-md-6">			
+			<div class="col-md-6 <%= "line_content" + String(step_counter) %>">			
 				<%= Line.find(step.line_id)[:content] %>
 			</div>
-			<div class="col-md-3">			
+			<div class="col-md-3 <%= "delete_link" + String(step_counter) %>">			
 				<%= link_to "remove", step_path(step), :method => :delete, :class => "remove" %>
 			</div>
 		</li>
