--- a/app/views/instalations/_instalation.html.erb
+++ b/app/views/instalations/_instalation.html.erb
@@ -3,7 +3,7 @@
 		<li>
 			<%= link_to instalation.name, instalation %>
 			<!--lines_instalation_path(instalation)-->
-			<% if current_user.admin? %>
+			<% if current_user != nil && current_user.admin? %>
 				<%= link_to "edit", edit_instalation_path(instalation), :class => "edit" %>
 				<%= link_to "delete", instalation, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
 			<% end %>
