--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -13,6 +13,7 @@
 					Operation System: <%= @instalation.os %>
 				</div>
 				<div>
+					<!--% if current_user.admin? && !current_user?(@user) TODO understand why it's not working %--> 
 					<% if current_user.admin? %>
 						<%= link_to "edit", edit_instalation_path(@instalation), :class => "edit" %>
 						<%= link_to "delete", @instalation, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
