--- a/app/views/instalations/_instalation.html.erb
+++ b/app/views/instalations/_instalation.html.erb
@@ -1,14 +1,25 @@
 <div class="row">
-	<aside class="col-md-4">
-		<li>
-			<%= link_to instalation.name, instalation %>
+	<!--aside class="col-md-4"-->
+		<!--li-->
+			<div class = "col-md-1 instalation_check_box">
+				<!--%= check_box_tag(:instalation) %-->
+				<input type="checkbox" name="tag_ids[]" value="<%= "check_box_" + String(instalation_counter) %>" />
+			</div>			
+			<div class = "col-md-4">
+				<%= link_to instalation.name, instalation %>
 			<!--lines_instalation_path(instalation)-->
+			</div>			
+			<div class = "col-md-4">
 			<% if current_user != nil && current_user.admin? %>
 				<%= link_to "edit", edit_instalation_path(instalation), :class => "edit" %>
 				<%= link_to "delete", instalation, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
 			<% end %>
-		</li>
-	</aside>
+			</div>
+			<div class = "col-md-3">
+			</div>			
+
+		<!--/li-->
+	<!--/aside>
 	<div class="col-md-8">
-	</div>
+	</div-->
 </div>
