--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
 		<%= link_to "linux apps installer", root_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
+				<li><%= link_to "Create File", createfile_path %></li>
 				<li><%= link_to "Instalation", instalations_path %></li>
 				<% if logged_in? %>
 					<li><%= link_to "Line", lines_path %></li>	
