--- a/app/views/instalations/index.html.erb
+++ b/app/views/instalations/index.html.erb
@@ -1,19 +1,30 @@
 <% provide(:title, 'All Instalations') %>
 <h1>All Instalations</h1>
 <div class="row">
-	<div class="col-md-6">
-		<span><%= pluralize(@instalations.count, "instalation") %></span>
+	<%= form_for(instalations_path ) do |f| %>
+		<%= hidden_field_tag :id, 2%>
 	
-		<%= will_paginate %>
+		<div class="col-md-6">
+			<span><%= pluralize(@instalations.count, "instalation") %></span>
+	
+			<%= will_paginate %>
 
-		<ul class="instalations">
-			<%= render @instalations %>
-		</ul>
+			<ul class="instalations">
+				<!--%= render @instalations %-->
+				<%= render @instalations,  f: f  %>
+			</ul>
 
-		<%= will_paginate %>
-	</div>
-	<div class="col-md-6">	
-		<%= link_to "Create New Instalation", instanew_path %>
-		<%= link_to "Generate File", instanew_path %>	
-	</div>
+			<%= will_paginate %>
+		</div>
+		<div class="col-md-6">	
+			<div class="row">
+				<%= link_to "Create New Instalation", instanew_path %>
+			</div>
+			<div class="row">
+			<!--%= f.submit "Add line", class: "btn btn-primary" %-->
+				<%= f.submit "Generate File", class: "btn btn-primary" %>
+			<!--%= link_to "Generate File", createfile_path %-->	
+			</div>
+		</div>
+	<% end %>
 </div>	
