test pass, downlaod file test done

--- a/app/views/run_files/new.html.erb
+++ b/app/views/run_files/new.html.erb
@@ -31,7 +31,7 @@
 			<% end -%>
 		
 
-			<%= f.submit "Create File", class: "btn btn-primary" %>
+			<%= f.submit "Create File", class: "btn btn-primary", id:"create file" %>
 		<% end %>
 	</div>
 </div>
