--- a/app/views/instalations/edit.html.erb
+++ b/app/views/instalations/edit.html.erb
@@ -13,6 +13,9 @@
 
 			<%= f.label :os %>
 			<%= f.text_field :os, class: 'form-control' %>
+		
+			<%= f.label :source_link %>
+			<%= f.text_field :source_link, class: 'form-control' %>
 
 			<%= f.submit "Save changes", class: "btn btn-primary" %>
 		<% end %>
