--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -13,7 +13,7 @@
 					Operation System: <%= @instalation.os %>
 				</div>
 				<div id="Source link">
-					Source link: <%= link_to @instalation.source_link  %>
+					Source link: <%= link_to String(@instalation.source_link), url_with_protocol(@instalation.source_link), :target => '_blank' %>.
 				</div>
 				<div>
 					<!--% if current_user.admin? && !current_user?(@user) TODO understand why it's not working %--> 
