--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -12,8 +12,8 @@
 				<div id="os">
 					Operation System: <%= @instalation.os %>
 				</div>
-				<div id="Source link">
-					Source link: <%= link_to String(@instalation.source_link), url_with_protocol(@instalation.source_link), :target => '_blank' %>.
+				<div id="source_link">
+					Source link: <%= link_to String(@instalation.source_link), url_with_protocol(@instalation.source_link), :target => '_blank' %>
 				</div>
 				<div>
 					<!--% if current_user.admin? && !current_user?(@user) TODO understand why it's not working %--> 
