test pass, add added by user to instalation view with test fix

--- a/app/views/instalations/show.html.erb
+++ b/app/views/instalations/show.html.erb
@@ -19,6 +19,9 @@
 						No link attached
 					<% end %>
 				</div>
+				<div id="added_by">
+					Added by: <%= link_to String(@user.name), @user, :target => '_blank' %>
+				</div>
 				<div>
 					<!--% if current_user.admin? && !current_user?(@user) TODO understand why it's not working %--> 
 					<% if current_user.admin? %>
