--- a/app/views/instalations/new.html.erb
+++ b/app/views/instalations/new.html.erb
@@ -13,6 +13,7 @@
 
 			<%= f.label :os %>
 			<%= f.text_field :os, class: 'form-control' %>
+			<!--%= f.collection_select :os, class: 'form-control' %-->			
 		
 			<%= f.label :source_link %>
 			<%= f.text_field :source_link, class: 'form-control' %>
