--- a/app/views/operating_systems/edit.html.erb
+++ b/app/views/operating_systems/edit.html.erb
@@ -1,17 +1,19 @@
-<% provide(:title, 'Operating System - New') %>
-<h1>Add Operating System</h1>
+<% provide(:title, "Edit Operation System") %>
+<h1>Update Operating System</h1>
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@operating_system) do |f| %>
 			<%= render 'shared/error_messages', object: f.object %>
+
 			<%= f.label :name %>
 			<%= f.text_field :name, class: 'form-control' %>
 
 			<%= f.label :version %>
-			<%= f.text_field :version, class: 'form-control' %>
+			<%= f.email_field :version, class: 'form-control' %>
 
-			<%= f.submit "Create new Operating System", class: "btn btn-primary" %>
+			<%= f.submit "Save changes", class: "btn btn-primary" %>
 		<% end %>
+
 	</div>
 </div>
