--- a/app/views/operating_systems/edit.html.erb
+++ b/app/views/operating_systems/edit.html.erb
@@ -10,7 +10,7 @@
 			<%= f.text_field :name, class: 'form-control' %>
 
 			<%= f.label :version %>
-			<%= f.email_field :version, class: 'form-control' %>
+			<%= f.text_field :version, class: 'form-control' %>
 
 			<%= f.submit "Save changes", class: "btn btn-primary" %>
 		<% end %>
