--- a/app/views/operating_systems/edit.html.erb
+++ b/app/views/operating_systems/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit Operation System") %>
-<h1>Update Operating System</h1>
+<h1>Edit Operating System</h1>
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
