--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><%= link_to "Operating System", operating_systems_path %></li>				
 				<li><%= link_to "Create File", createfile_path %></li>
-				<li><%= link_to "Instalation", instalations_path %></li>
+				<li><%= link_to "Installation", installations_path %></li>
 				<% if logged_in? %>
 					<li><%= link_to "Line", lines_path %></li>	
 				<% end %>				
