--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,16 +3,19 @@
 		<%= link_to "linux apps installer", root_path, id: "logo" %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
-				<li><%= link_to "Operating System", operating_systems_path %></li>				
 				<li><%= link_to "Create File", createfile_path %></li>
-				<li><%= link_to "Installation", installations_path %></li>
 				<% if logged_in? %>
-					<li><%= link_to "Line", lines_path %></li>	
+					<ul class="dropdown-menu">
+						<li><%= link_to "Operating System", operating_systems_path %></li>
+						<li><%= link_to "Line", lines_path %></li>
+						<li><%= link_to "Installation", installations_path %></li>
+					</ul>				
 				<% end %>				
-				<li><%= link_to "Home", root_path %></li>
-				<li><%= link_to "Help", help_path %></li>
+				<!--li><!--%= link_to "Home", root_path %--></li-->
 				<% if logged_in? %>
-					<li><%= link_to "Users", users_path %></li>
+					<% if current_user.admin? %>
+						<li><%= link_to "Users", users_path %></li>
+					<% end %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 
 							Account 
@@ -27,6 +30,7 @@
 					</li>
 				<% else %>
 					<li><%= link_to "Log in", login_path %></li>
+					<li><%= link_to "Sign up", signup_path %></li>
 				<% end %>			
 			</ul>
 		</nav>
