--- a/app/views/run_files/new.html.erb
+++ b/app/views/run_files/new.html.erb
@@ -1,37 +1,1 @@
-<% provide(:title, "Create File") %>
-<h1>Create File</h1>
-
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<!--%= form_for(:run_file, url: createfile_path) do |f| %-->
-		<%= form_for(:Installation, url: createfile_path(@installations)) do |f| %>
-			
-			<!--%= render @installations,  f: f  %-->
-		
-		
-				<% @installations.each do |product| -%>
-
-  				<!--%= fields_for 'product[]' , product do |product_fields| -%-->
-  				<%= fields_for '@installations[]' , product do |product_fields| -%>
-					<div class="row">
- 					<div class="col-md-1">
-						<!--%= product_fields.check_box :torun %-->
-						<%= product_fields.check_box :torun %>
-					</div>
-					<div class="col-md-8">
-
-					<!--%= link_to product_fields, product.name %-->
-						<%= link_to product.name, product %>
-					</div>
-    			<!--%= product_fields.check_box :torun %-->
-					</div>
-
-  			<% end -%>
-
-			<% end -%>
-		
-
-			<%= f.submit "Create File", class: "btn btn-primary", id:"create file" %>
-		<% end %>
-	</div>
-</div>
+<%= render 'run_files/new' %>
