--- a/app/views/static_pages/_home_notlogedin.html.erb
+++ b/app/views/static_pages/_home_notlogedin.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, "Home") %>
 <h1>Welcome to Linux Apps Installer</h1>
 <h2>
 	This is the home page for the
 	<a href="http://www.chaospredictor.com/">Chaos Predictor</a>
 	samplbe application.
 </h2>
-<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+<!--%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %-->
