test not pass, working on show installation as logged in not admin not owner, taking a break

--- a/app/views/installations/new.html.erb
+++ b/app/views/installations/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Installations') %>
-<h1>Installations</h1>
+<% provide(:title, 'New Installation') %>
+<h1>New Installation</h1>
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
