--- a/app/views/installations/_installation.html.erb
+++ b/app/views/installations/_installation.html.erb
@@ -6,17 +6,23 @@
 				<!--input type="checkbox" name="tag_ids[]" value="<!--%= "check_box_" + String(installation_counter) %>" /-->
 				<%= f.check_box :torun %>
 				<%= hidden_field_tag :number, String(installation_counter) %>
-			</div>			
-			<div class = "col-md-4">
-				<%= link_to installation.name, installation %>
-			<!--lines_installation_path(installation)-->
-			</div>			
-			<div class = "col-md-4">
-			<% if current_user != nil && current_user.admin? %>
-				<%= link_to "edit", edit_installation_path(installation), :class => "edit" %>
-				<%= link_to "delete", installation, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
-			<% end %>
 			</div>
+			<% if logged_in? %>
+				<div class = "col-md-4">
+					<%= link_to installation.name, installation %>
+				</div>			
+				<div class = "col-md-4">
+					<% if current_user.admin? %>
+						<%= link_to "edit", edit_installation_path(installation), :class => "edit" %>
+						<%= link_to "delete", installation, method: :delete, data: { confirm: "You sure?" }, :class => "delete" %>
+					<% end %>
+				</div>
+			<% else %>
+				<div class = "col-md-4">
+					
+					<%= installation.name %>
+				</div>
+			<% end %>
 			<div class = "col-md-3">
 			</div>			
 
