--- a/app/views/installations/_installation.html.erb
+++ b/app/views/installations/_installation.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
-	<!--aside class="col-md-4"-->
-		<!--li-->
-			<div class = "col-md-1 installation_check_box">
-				<!--%= check_box_tag(:installation) %-->
-				<!--input type="checkbox" name="tag_ids[]" value="<!--%= "check_box_" + String(installation_counter) %>" /-->
-				<%= f.check_box :torun %>
-				<%= hidden_field_tag :number, String(installation_counter) %>
-			</div>
+
+	<% if current_page == "createfile" %>
+		<div class = "col-md-1 installation_check_box">
+			<%= f.check_box :torun %>
+			<%= hidden_field_tag :number, String(installation_counter) %>
+		</div>
+	<% end %>
+
 			<% if logged_in? %>
-				<div class = "col-md-4">
+				<div class = "col-md-2">
 					<%= link_to installation.name, installation %>
 				</div>			
 				<div class = "col-md-4">
@@ -26,8 +26,4 @@
 			<div class = "col-md-3">
 			</div>			
 
-		<!--/li-->
-	<!--/aside>
-	<div class="col-md-8">
-	</div-->
 </div>
