--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,8 +33,12 @@
 						</ul>
 					</li>
 				<% else %>
-					<li><%= link_to "Log in", login_path %></li>
-					<li><%= link_to "Sign up", signup_path %></li>
+					<% if current_page != "login" %>
+						<li><%= link_to "Log in", login_path %></li>
+					<% end %>					
+					<% if current_page != "signup" %>
+						<li><%= link_to "Sign up", signup_path %></li>
+					<% end %>	
 				<% end %>	
 			</ul>
 		</nav>
